<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">College4U</string>
    <string name="main_title">College4U</string>
    <string name="app_name">College4U</string>
    <string name="title">College4U</string>
    <string name="help_title">Help</string>
    <string name="settings_label">Settings</string>
    <string name="gpa">GPA?</string>
    <string name="sat">SAT?</string>
    <string name="act">ACT?</string>
    <string name="save">Save</string>
    <string name="login_title">College4U Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="permission_launch_activity"> This permission allows launching an activity in this application </string>
    <string name="exit">Exit</string>
    <string name="new_account">New College4U Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="start_audio">Start Audio</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="record_audio">Record Audio</string>
    <string name="options">Options</string>
    <string name="new_game">New Game</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="images">Images</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sensors">Sensors</string>
    <string name="exit_help">Exit Help</string>
    <string name="show_image">Show Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_user">New User</string>
    <string name="login">Login</string>
    <string name="start_video">Start Video</string>
    <string name="stop_video">Stop Video</string>
    <string name="record_video">Record Video</string>
    <string name="find">Find</string>
    <string name="locate_me">Locate Me</string>
    <string name="id">id</string>
    <string name="hello">hello</string>
    <string name="create_new_account">Create New Account</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_new_user">New User</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_school__listings">Colleges 4 U</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_activity_national_fragment">NationalFragment</string>
    <string name="title_activity_in_state_fragment">InStateFragment</string>

</resources>
