<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paperbackground1"
    android:fillViewport="true"
    android:orientation="horizontal"
    android:padding="20dip"
    android:paddingLeft="2dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginBottom="15dip"
            android:paddingLeft="10dp"
            android:text="@string/login_title"
            android:textColor="#000"
            android:textSize="20.5sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="80dp"
            android:paddingTop="30dp"
            android:text="@string/enter_username"
            android:textColor="#000"
            android:textSize="15.5sp" />

        <EditText
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/inputbox"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="80dp"
            android:paddingTop="30dp"
            android:text="@string/enter_password"
            android:textColor="#000"
            android:textSize="15.5sp" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/inputbox"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/pencil_button"
            android:text="@string/login" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pencil_button"
            android:text="@string/exit" />

        <Button
            android:id="@+id/new_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/pencil_button"
            android:text="@string/new_user" />
    </LinearLayout>

</ScrollView>
